  
  * A note to module authors, and tying to events: drop your module in modules/, then define an event in bot.py. In your module, you simple determine what 'type' of event to subscribe to. When that event is triggered, the event will notify all modules that have subscribed to it.
 Issues:
 -------
  * IRC pass and DB pass must be specified in each network block, as each thread is really only concerned with 
  information relevant to itself; specific to its own network. This is probably not how the bot would be used;
  it's likely he'd be running on one machine, with one DB password. IRC pass per-network makes sense, though.
  
  * Code still very much needs to be cleaned up and restructured. 

  * bot class still passing only PRIVMSGs to botbrain -- for events to be really useful (see Future), JOINS, PARTS,
  etc would need to get passed as well.

v0.6
======

  Features: 
    * Dynamic module loading and unloading, and dynamic event creation are add. 
    * setup.sh generates mysql commands to create database and add user for the bot to log in as.
    * Dynamic help and some more framework additions to modules. help.py module checks for every module's field 'help' and will display that if available.

  Bugs fixed:
    DB respects username and password and db name from configuration file.

v0.6.1
======
  ** This version is incompatible with previous versions, due to an additional argument being passed to modules (a convenience 'say' function). **
  
v0.6.2
======
  Features:
    * BaseModule, allowing modules to inherit from it and have it do all the boilerplate on the default __init__, and doing any additional work they need in a post_init function.

v0.6.5
======
  Fixes the keyboard interrupt in debug mode issue.