@@ -25,7 +25,10 @@ class Youtube(BaseModule):
     self.bot.mem_store['youtube'] = OrderedDict()
 
   def print_video_title(self, event, url, video_tag):
-    response = urllib2.urlopen("https://gdata.youtube.com/feeds/api/videos/"+video_tag+"?v=2").read()
+    try:
+      response = urllib2.urlopen("https://gdata.youtube.com/feeds/api/videos/"+video_tag+"?v=2").read()
+    except urllib2.HTTPError:
+      return
     xml_response = parseString(response)
     duration = xml_response.getElementsByTagName('yt:duration')
     ulength = duration[0].getAttribute("seconds")
